<resources>
    <string name="app_name">EDxEDNYC</string>

    <string name="title_section1">About</string>
    <string name="title_section2">Activity Feed</string>
    <string name="title_section3">Conversations</string>
    <string name="title_section4">Feedback</string>
    <string name="title_section5">Event Organizers</string>
    <string name="title_section6">Schedule</string>
    <string name="title_section7">Sponsors</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_about">About the Dev</string>

    <string name="about_title">EDxEDNYC 2015</string>
    <string name="about_title2">EDxEDNYC CONFERENCE June 4, 2015</string>
    <string name="about_text">The mission of EDxEDNYC 2015 is to build best practices,
        network with other innovative thinkers within New York City and to continue conversations
        around student engagement and inquiry. This conference is for educators by educators, with a focus on fostering discussion,
        questioning, reflective leadership and design-thinking within our schools.</string>
    <string name="direction_title">THE PROFESSIONAL LEARNING CONFERENCE EVENT</string>
    <string name="date">JUNE 4, 2015 9am-3:30pm</string>
    <string name="location">at Hudson High School of Learning Technologies</string>
    <string name="address">351 West 19th St.\n1st Floor\nNew York, NY 10011\n</string>
    <string name="telephone">T: 212.388.3330</string>
    <string name="email">E: EDxED@hudson.com</string>
    <string name="show_more">Show more</string>
    <string name="add_cal">Add to Schedule</string>
    <string name="rem_cal">Remove from Schedule</string>
    <string name="conflict_on_cal">Another conversation has already been added for this sessions.  Would you like to replace it?</string>

    <string name="add_to_cal">Would you like to add this event to your Google Calendar?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="empty">There is nothing here!  Add events to your schedule!</string>
    <string name="new_feedback">New Feedback</string>
    <string name="feedback_title2">What kind of feedback is this?</string>
    <string name="feedback_radio1">Suggestion</string>
    <string name="feedback_radio2">Problem</string>
    <string name="feedback_send">Send</string>
    <string name="twitter_feed">Join the conversation by using #EDxEDNYC</string>
    <string name="no_connection">Unable to pull tweets at this time.</string>
    <string name="action_refresh">Refresh</string>
    <string name="about_the_dev">About the Developer</string>
    <string name="dev_name">Patrick Breitwieser</string>
    <string name="dev_title">Educator at HHSLT</string>
    <string name="dev_twitter">\@pbreitwieser</string>
    <string name="cancel">Cancel</string>

</resources>
