<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about_title"
        android:text="@string/about_title"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about_title2"
        android:text="@string/about_title2"
        android:layout_below="@+id/about_title"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about_text"
        android:text="@string/about_text"
        android:layout_below="@+id/about_title2"
        android:paddingBottom="24dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/direction_title"
        android:text="@string/direction_title"
        android:layout_below="@+id/about_text"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center" />

    <TextView
        android:paddingBottom="6dip"
        android:layout_width="fill_parent"
        android:id="@+id/hor_div"
        android:layout_height="2dip"
        android:background="#ff000000"
        android:layout_below="@+id/direction_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date"
        android:text="@string/date"
        android:layout_below="@+id/hor_div"
        android:textStyle="bold"
        android:paddingTop="6dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/location"
        android:text="@string/location"
        android:layout_below="@+id/date" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/address"
        android:text="@string/address"
        android:layout_below="@+id/location"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/telephone"
        android:text="@string/telephone"
        android:layout_below="@+id/address"
        android:autoLink="phone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:text="@string/email"
        android:layout_below="@+id/telephone"
        android:autoLink="email"/>


</RelativeLayout>
