<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/about_title"
                android:text="@string/new_feedback"
                android:textSize="28sp"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/about_title2"
                android:text="@string/feedback_title2"
                android:layout_below="@+id/about_title"
                android:textStyle="bold"
                android:textSize="18sp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback_radio1"
                android:id="@+id/radioButton"
                android:layout_below="@+id/about_title2"
                android:layout_alignLeft="@+id/about_title2"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback_radio2"
                android:id="@+id/radioButton2"
                android:layout_alignTop="@+id/radioButton"
                android:layout_centerHorizontal="true" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/details"
                android:layout_below="@+id/radioButton"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback_send"
                android:id="@+id/button"
                android:layout_below="@+id/details"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
