<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true">
    <!-- A CardView that contains a TextView -->
    <android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:id="@+id/pic"
            android:paddingTop="6sp"
            android:paddingBottom="6sp"
            />
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/cyan"
            android:paddingLeft="6dp"
            android:layout_toRightOf="@+id/pic"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="6dp"
            android:layout_toRightOf="@+id/pic"
            android:layout_below="@+id/title"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/room"
            android:layout_toRightOf="@+id/pic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="6dp"
            android:layout_below="@id/name"/>

        <TextView
            android:id="@+id/session"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/hor_div"
            android:layout_below="@id/name"
            android:gravity="right"
            android:paddingRight="6dp"/>

        <TextView
            android:layout_width="fill_parent"
            android:id="@+id/hor_div"
            android:layout_height="1dip"
            android:background="#ff5d5d5d"
            android:layout_below="@+id/room"/>
        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:layout_below="@+id/hor_div"
            android:textSize="16sp"/>
        <TextView
            android:paddingBottom="6dip"
            android:layout_width="fill_parent"
            android:id="@+id/hor_div2"
            android:layout_height="1dip"
            android:background="#ff5d5d5d"
            android:layout_below="@+id/desc"/>
        <TextView
            android:id="@+id/google_calendar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:textStyle="italic"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:text="@string/add_cal"
            android:layout_below="@+id/hor_div2"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/rem_google_calendar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:textStyle="italic"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:text="@string/rem_cal"
            android:layout_below="@+id/hor_div2"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/show_more"
            android:text="@string/show_more"
            android:textStyle="italic"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:layout_below="@+id/hor_div2"
            android:clickable="true"
            android:textSize="16sp"/>
    </RelativeLayout>
        </android.support.v7.widget.CardView>
</RelativeLayout>